# tauri-apps-tauri

./: LICENSE.spdx  package.json  pnpm-lock.yaml  renovate.json
.changes/: add-community-plugins.md  add-headers-config-option.md  api-channel-miss-events.md  api-transfrom-icon-about-menu-item.md  api-transfrom-icon-icon-menu-item.md  background-color-apis.md  background-color.md  bundler-fragment-handlebars.md  bundler-nsis-portuguese.md  bundler-skip-ci.md  change-pr-12270.md  child-windows-macos.md  cli-add-pkgname.md  cli-generate-64x64-icon.md  cli-migrate-deno.md  cli-remove-command.md  cli-watcher-exit-on-change.md  cli-yarn-berry.md  core-background-color-permissions.md  core-builder-on-tray-icon-event.md  core-scope-is-forbidden.md  data-store-identifier.md  deb-updater-support.md  enhance-async-commands-error.md  enhance-resource-dir-linux.md  escape-glob.md  event-anylabel-fix.md  extension-path.md  fix-add-capability-panic.md  fix-apijs-mockipc-cb-type.md  fix-cli-dev-server-reload.md  fix-cli-permission-typing.md  fix-cli-plugin-path.md  fix-development-team-spaces.md  fix-resource-id.md  home-dir-regression.md  ignore-notify-access-type.md  info-linux-de-and-session.md  json5-capability-files.md  overlay.md  (+20 more)
.changes/dpi-to-logical/: physical-regression.md
bench/: Cargo.toml
crates/tauri-schema-generator/: Cargo.toml
crates/tauri-schema-generator/schemas/: capability.schema.json  config.schema.json
crates/tauri-schema-generator/src/: main.rs
crates/tauri-schema-worker/: Cargo.toml  package.json
crates/tauri-schema-worker/src/: config.rs
(+163 files in other folders)
